# fastapi_template

./: .env  .env.example  .gitignore  README.md  logger_config.py  main.py  pyproject.toml
entrypoints/: asgi.py
src/: app.py  config.py
src/adapters/orm/: base.py
src/common/dto/: base.py
src/common/exceptions/: auth.py  base.py  database.py
